# mcphorizon-k8s-operator

./: README.md
k8s-manifests/: 02-runtime-registry-configmap.yaml  03-runtime-deployment.yaml  04-runtime-service.yaml  05-runtime-ingress.yaml  README.md
python/: Dockerfile  Dockerfile.operator  README.md  pyproject.toml  requirements.txt
python/k8s-manifests/: 00-crd.yaml  01-operator-rbac.yaml  02-basic-auth-secret.yaml  03-operator-deployment.yaml  04-sample-mcp-server.yaml  05-kaniko-server-job.yaml  06-kaniko-operator-job.yaml
python/mcp_k8s_operator/: __init__.py  config.py  k8s_client.py  operator.py  registry.py  server.py
python/tests/e2e/: conftest.py  test_cases.md  test_mcp_server.py  test_operator_install_flow.py
